--- a/nszz/dsp1.htm
+++ b/nszz/dsp1.htm
@@ -2,8 +2,8 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>Éñ¾­µÚÒ»ÕÂÒìÏñÊé¶ÌÊÓÆµºÏ¼¯</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>ç¥ç»ç¬¬ä¸€ç« å¼‚åƒä¹¦çŸ­è§†é¢‘åˆé›†</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -15,57 +15,61 @@
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
 <p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<font size="6" color="#800080">Éñ¾­µÚÒ»ÕÂÒìÏñÊé¶ÌÊÓÆµºÏ¼¯<span lang="en-us"> </span></font></p>
-<p>¡¡</p>
-<p>¡¡
+<font size="6" color="#800080">ç¥ç»ç¬¬ä¸€ç« å¼‚åƒä¹¦çŸ­è§†é¢‘åˆé›†<span lang="en-us"> </span></font></p>
+<p>ã€€</p>
+<p>ã€€
 
 <font size="6" color="#800080">&nbsp;&nbsp; </font><font size="4" color="#800080">
-&nbsp;</font><font size="4" color="#800080"><a target="_blank" a href="http://www.gegod.com/movie/dsp/sjml.mp4">Éñ¾­Ä¿Â¼</a></font>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sjml-sj1-1-2.mp4">Éñ¾­Ä¿Â¼ÒìÏñÊé1-2½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-3-5.mp4">Éñ¾­ÒìÏñÊé3-5½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-6-9.mp4">Éñ¾­ÒìÏñÊé6-9½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+&nbsp;</font><font size="4" color="#800080"><a target="_blank" a href="http://www.gegod.com/movie/dsp/sjml.mp4">ç¥ç»ç›®å½•</a></font>&nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sjml-sj1-1-2.mp4">ç¥ç»ç›®å½•å¼‚åƒä¹¦1-2èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-3-5.mp4">ç¥ç»å¼‚åƒä¹¦3-5èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-6-9.mp4">ç¥ç»å¼‚åƒä¹¦6-9èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
 
 
 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-10-11.mp4">Éñ¾­ ÒìÏñÊé10-11½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-12-14.mp4">Éñ¾­ ÒìÏñÊé12-14½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-14-16.mp4">Éñ¾­ ÒìÏñÊé14-16½Ú</a> &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-17-19.mp4">Éñ¾­ ÒìÏñÊé17-19½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;</span></span><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-20-23.mp4">Éñ¾­ ÒìÏñÊé20-23½Ú</a> &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-24-25.mp4">Éñ¾­ ÒìÏñÊé24-25½Ú</a>&nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-26-29.mp4">Éñ¾­ ÒìÏñÊé26-29½Ú</a> &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-30-32.mp4">Éñ¾­ ÒìÏñÊé30-32½Ú</a> &nbsp;
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-10-11.mp4">ç¥ç» å¼‚åƒä¹¦10-11èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-12-14.mp4">ç¥ç» å¼‚åƒä¹¦12-14èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-14-16.mp4">ç¥ç» å¼‚åƒä¹¦14-16èŠ‚</a> &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-17-19.mp4">ç¥ç» å¼‚åƒä¹¦17-19èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;</span></span><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-20-23.mp4">ç¥ç» å¼‚åƒä¹¦20-23èŠ‚</a> &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-24-25.mp4">ç¥ç» å¼‚åƒä¹¦24-25èŠ‚</a>&nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-26-29.mp4">ç¥ç» å¼‚åƒä¹¦26-29èŠ‚</a> &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-30-32.mp4">ç¥ç» å¼‚åƒä¹¦30-32èŠ‚</a> &nbsp;
 
 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-33-34.mp4">Éñ¾­ ÒìÏñÊé33-34½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-35-36.mp4">Éñ¾­ ÒìÏñÊé35-36½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-33-34.mp4">ç¥ç» å¼‚åƒä¹¦33-34èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-35-36.mp4">ç¥ç» å¼‚åƒä¹¦35-36èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-37-39.mp4">Éñ¾­ ÒìÏñÊé37-39½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-40-41.mp4">Éñ¾­ ÒìÏñÊé40-41½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-42-44.mp4">Éñ¾­ ÒìÏñÊé42-44½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-45.mp4">Éñ¾­ ÒìÏñÊé45½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-
-
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-46.mp4">Éñ¾­ ÒìÏñÊé46½Ú</a> &nbsp; &nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-47-48.mp4">Éñ¾­ ÒìÏñÊé47-48½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-49-50.mp4">Éñ¾­ ÒìÏñÊé49-50½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-51.mp4">Éñ¾­ ÒìÏñÊé51½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-37-39.mp4">ç¥ç» å¼‚åƒä¹¦37-39èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-40-41.mp4">ç¥ç» å¼‚åƒä¹¦40-41èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-42-44.mp4">ç¥ç» å¼‚åƒä¹¦42-44èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-45.mp4">ç¥ç» å¼‚åƒä¹¦45èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
 
 
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-52-53.mp4">Éñ¾­ ÒìÏñÊé52-53½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-54.mp4">Éñ¾­ ÒìÏñÊé54½Ú</a> &nbsp; &nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-55-56.mp4">Éñ¾­ ÒìÏñÊé55-56½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-57-58.mp4">Éñ¾­ ÒìÏñÊé57-58½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-59-61.mp4">Éñ¾­ ÒìÏñÊé59-61½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-62-64.mp4">Éñ¾­ ÒìÏñÊé62-64½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-65.mp4">Éñ¾­ ÒìÏñÊé65½Ú</a> &nbsp; &nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-66-69.mp4">Éñ¾­ ÒìÏñÊé66-69½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-46.mp4">ç¥ç» å¼‚åƒä¹¦46èŠ‚</a> &nbsp; &nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-47-48.mp4">ç¥ç» å¼‚åƒä¹¦47-48èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-49-50.mp4">ç¥ç» å¼‚åƒä¹¦49-50èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-51.mp4">ç¥ç» å¼‚åƒä¹¦51èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
 
 
-<p>¡¡</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-52-53.mp4">ç¥ç» å¼‚åƒä¹¦52-53èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-54.mp4">ç¥ç» å¼‚åƒä¹¦54èŠ‚</a> &nbsp; &nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-55-56.mp4">ç¥ç» å¼‚åƒä¹¦55-56èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-57-58.mp4">ç¥ç» å¼‚åƒä¹¦57-58èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-59-61.mp4">ç¥ç» å¼‚åƒä¹¦59-61èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-62-64.mp4">ç¥ç» å¼‚åƒä¹¦62-64èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-65.mp4">ç¥ç» å¼‚åƒä¹¦65èŠ‚</a> &nbsp; &nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj1-66.mp4">ç¥ç» å¼‚åƒä¹¦66èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
+
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-67.mp4">ç¥ç» å¼‚åƒä¹¦67èŠ‚</a> &nbsp; &nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-68-70.mp4">ç¥ç» å¼‚åƒä¹¦68-70èŠ‚</a> &nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-70-72.mp4">ç¥ç» å¼‚åƒä¹¦70-72èŠ‚</a> &nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-73-74.mp4">ç¥ç» å¼‚åƒä¹¦73-74èŠ‚</a> &nbsp;
+ã€€</p>
+
+
+&nbsp; &nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-75.mp4">ç¥ç» å¼‚åƒä¹¦75èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-76.mp4">ç¥ç» å¼‚åƒä¹¦76èŠ‚</a> &nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-77-78.mp4">ç¥ç» å¼‚åƒä¹¦77-78èŠ‚</a> &nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-79-80.mp4">ç¥ç» å¼‚åƒä¹¦79-80èŠ‚</a> &nbsp;
 
 
 
-</font>
+</font><p>
 
-&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-80-82.mp4">ç¥ç» å¼‚åƒä¹¦80-82èŠ‚</a>&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-83.mp4">ç¥ç» å¼‚åƒä¹¦83èŠ‚</a> &nbsp;&nbsp; ã€€<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-84-85.mp4">ç¥ç» å¼‚åƒä¹¦84-85èŠ‚</a> &nbsp; ã€€<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj1-86-87.mp4">ç¥ç» å¼‚åƒä¹¦86-87èŠ‚</a> &nbsp;</p>
+
 &nbsp;&nbsp;&nbsp;
 &nbsp;&nbsp;&nbsp;
 <script>
@@ -78,7 +82,19 @@ var _hmt = _hmt || [];
 })();
 </script><br><br>
 
-<p>¡¡</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 
 
 </body>
