--- a/nszz/dsp11.htm
+++ b/nszz/dsp11.htm
@@ -2,8 +2,8 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title> Éñ¾­µÚÊ®Ò»ÕÂ¸£ÒôÊé¶ÌÊÓÆµºÏ¼¯</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title> ç¥ç»ç¬¬åä¸€ç« ç¦éŸ³ä¹¦çŸ­è§†é¢‘åˆé›†</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -14,51 +14,51 @@
 <body>
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><font size="6" color="#800080"> Éñ¾­µÚÊ®Ò»ÕÂ¸£ÒôÊé¶ÌÊÓÆµ
-  ºÏ¼¯</font>&nbsp;</p><p>¡¡</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-1-2.mp4">Éñ¾­ ¸£ÒôÊé1-2½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><font size="6" color="#800080"> ç¥ç»ç¬¬åä¸€ç« ç¦éŸ³ä¹¦çŸ­è§†é¢‘
+  åˆé›†</font>&nbsp;</p><p>ã€€</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-1-2.mp4">ç¥ç» ç¦éŸ³ä¹¦1-2èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
 </span>&nbsp;&nbsp; &nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-3-4.mp4">Éñ¾­ ¸£ÒôÊé3-4½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-5-8.mp4">Éñ¾­¸£ÒôÊé5-8½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-3-4.mp4">ç¥ç» ç¦éŸ³ä¹¦3-4èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp; &nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-5-8.mp4">ç¥ç»ç¦éŸ³ä¹¦5-8èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-9-12.mp4">Éñ¾­ ¸£ÒôÊé9-12½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;
-	</span>&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-13-16.mp4">Éñ¾­ ¸£ÒôÊé13-16½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-17-18.mp4">Éñ¾­ ¸£ÒôÊé17-18½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-19-21.mp4">Éñ¾­¸£ÒôÊé19-21½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-9-12.mp4">ç¥ç» ç¦éŸ³ä¹¦9-12èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;
+	</span>&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-13-16.mp4">ç¥ç» ç¦éŸ³ä¹¦13-16èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-17-18.mp4">ç¥ç» ç¦éŸ³ä¹¦17-18èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-19-21.mp4">ç¥ç»ç¦éŸ³ä¹¦19-21èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-22-26.mp4">Éñ¾­ ¸£ÒôÊé22-26½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-27-28.mp4">Éñ¾­ ¸£ÒôÊé27-28½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-29-34.mp4">Éñ¾­ ¸£ÒôÊé29-34½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp; &nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-35-38.mp4">Éñ¾­¸£ÒôÊé35-38½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-22-26.mp4">ç¥ç» ç¦éŸ³ä¹¦22-26èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-27-28.mp4">ç¥ç» ç¦éŸ³ä¹¦27-28èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-29-34.mp4">ç¥ç» ç¦éŸ³ä¹¦29-34èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp; &nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-35-38.mp4">ç¥ç»ç¦éŸ³ä¹¦35-38èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-39-41.mp4">Éñ¾­ ¸£ÒôÊé39-41½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-42-46.mp4">Éñ¾­ ¸£ÒôÊé42-46½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-47.mp4">Éñ¾­ ¸£ÒôÊé47½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-48-49.mp4">Éñ¾­¸£ÒôÊé48-49½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-39-41.mp4">ç¥ç» ç¦éŸ³ä¹¦39-41èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-42-46.mp4">ç¥ç» ç¦éŸ³ä¹¦42-46èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-47.mp4">ç¥ç» ç¦éŸ³ä¹¦47èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-48-49.mp4">ç¥ç»ç¦éŸ³ä¹¦48-49èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-49-52.mp4">Éñ¾­ ¸£ÒôÊé49-52½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-53-57.mp4">Éñ¾­ ¸£ÒôÊé53-57½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-58-59.mp4">Éñ¾­ ¸£ÒôÊé58-59½Ú</a> &nbsp;<span lang="en-us">&nbsp; &nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-60.mp4">Éñ¾­¸£ÒôÊé60½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-49-52.mp4">ç¥ç» ç¦éŸ³ä¹¦49-52èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-53-57.mp4">ç¥ç» ç¦éŸ³ä¹¦53-57èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-58-59.mp4">ç¥ç» ç¦éŸ³ä¹¦58-59èŠ‚</a> &nbsp;<span lang="en-us">&nbsp; &nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-60.mp4">ç¥ç»ç¦éŸ³ä¹¦60èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-61.mp4">Éñ¾­ ¸£ÒôÊé61½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;
-	</span>&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-62.mp4">Éñ¾­ ¸£ÒôÊé62½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-61.mp4">ç¥ç» ç¦éŸ³ä¹¦61èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;
+	</span>&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-62.mp4">ç¥ç» ç¦éŸ³ä¹¦62èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; 
 	<span lang="en-us">&nbsp;&nbsp;&nbsp; </span>&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-63-64.mp4">Éñ¾­ ¸£ÒôÊé63-64½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-65-66.mp4">Éñ¾­¸£ÒôÊé65-66½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-63-64.mp4">ç¥ç» ç¦éŸ³ä¹¦63-64èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-65-66.mp4">ç¥ç»ç¦éŸ³ä¹¦65-66èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-67.mp4">Éñ¾­ ¸£ÒôÊé67½Ú</a> &nbsp;&nbsp; &nbsp;<span lang="en-us">&nbsp;&nbsp;
-	</span>&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-68-69.mp4">Éñ¾­ ¸£ÒôÊé68-69½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-70-71.mp4">Éñ¾­ ¸£ÒôÊé70-71½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-72-74.mp4">Éñ¾­¸£ÒôÊé72-74½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-67.mp4">ç¥ç» ç¦éŸ³ä¹¦67èŠ‚</a> &nbsp;&nbsp; &nbsp;<span lang="en-us">&nbsp;&nbsp;
+	</span>&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-68-69.mp4">ç¥ç» ç¦éŸ³ä¹¦68-69èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-70-71.mp4">ç¥ç» ç¦éŸ³ä¹¦70-71èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-72-74.mp4">ç¥ç»ç¦éŸ³ä¹¦72-74èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-75-78.mp4">Éñ¾­ ¸£ÒôÊé75-78½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-78-79.mp4">Éñ¾­ ¸£ÒôÊé78-79½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-80-81.mp4">Éñ¾­ ¸£ÒôÊé80-81½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-82-85.mp4">Éñ¾­¸£ÒôÊé82-85½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-75-78.mp4">ç¥ç» ç¦éŸ³ä¹¦75-78èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-78-79.mp4">ç¥ç» ç¦éŸ³ä¹¦78-79èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-80-81.mp4">ç¥ç» ç¦éŸ³ä¹¦80-81èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-82-85.mp4">ç¥ç»ç¦éŸ³ä¹¦82-85èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-86-89.mp4">Éñ¾­ ¸£ÒôÊé86-89½Ú</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-90-93.mp4">Éñ¾­ ¸£ÒôÊé90-93½Ú</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-94-98.mp4">Éñ¾­ ¸£ÒôÊé94-98½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-99-101-sj12-1-4.mp4">Éñ¾­¸£ÒôÊé99-101½ÚÓïÂ¼Êé1-4½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-86-89.mp4">ç¥ç» ç¦éŸ³ä¹¦86-89èŠ‚</a> &nbsp;&nbsp; &nbsp;&nbsp;&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-90-93.mp4">ç¥ç» ç¦éŸ³ä¹¦90-93èŠ‚</a> &nbsp;&nbsp;&nbsp; &nbsp; &nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-94-98.mp4">ç¥ç» ç¦éŸ³ä¹¦94-98èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-99-101-sj12-1-4.mp4">ç¥ç»ç¦éŸ³ä¹¦99-101èŠ‚è¯­å½•ä¹¦1-4èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; 
 
 
-	<p>¡¡</p>
+	<p>ã€€</p>
 
 
 
@@ -77,7 +77,19 @@ var _hmt = _hmt || [];
 })();
 </script><br><br>
 
-<p>¡¡</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 
 </body>
 
