--- a/nszz/gm.htm
+++ b/nszz/gm.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -49,10 +49,8 @@
 <p>下半年，“你们要听他”，葛亦民。</p>
 <p>20020227，耶梅网、社区。</p>
 <p>20020525，撒旦被赶出体内。</p>
-<p>2006，葛亦民网http://www.geyimin.com</p>
-<p>紫薇圣人网http://www.紫薇圣人.com</p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
 
-<p>大同世界网http://www.20331126.xyz</p>
 
 </body>
 
