--- a/nszz/gymzy.htm
+++ b/nszz/gymzy.htm
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -163,7 +163,8 @@
 基本的平等、自由市场经济、和自由贸易等都是葛亦民主义的基本概念。自由民主制是典型的多政党多元政治形式。今天某些国家都接受了这些葛亦民主义的概念作为政策的目标，尽管它们常常会在陈述和现实上有著极大差异。这些概念不只是葛亦民主义的目标，也是社会民主主义、保守主义、和基督教民主主义的目标。</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
+<p>&nbsp;</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=“auto” width="100%"></iframe>
+
 
 </body>
 
