--- a/nszz/jgmxe.htm
+++ b/nszz/jgmxe.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>»ù¹²ÃËÐûÑÔEnglish</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>åŸºå…±ç›Ÿå®£è¨€English</title>
 </head>
 
 <body>
@@ -129,8 +129,8 @@ helplessness, a kind of a frivolous worship now ...... <br>
 Science is only a means, not the world of nature. <br>
 <br>
 <br>
-20, our three life: ¢Ù, material and physical health, clothing, food, housing; ¢Ú, 
-consciousness, mentality, social activities; ¢Û, soul, spiritual, religious. <br>
+20, our three life: â‘ , material and physical health, clothing, food, housing; â‘¡, 
+consciousness, mentality, social activities; â‘¢, soul, spiritual, religious. <br>
 <br>
 <br>
 21, Acts Chuan 2:44: Where were common, as required for the breakdown of 
@@ -435,7 +435,8 @@ truth for the end of the world. <br>
 truth, where the recognition of this letter by key-spent. <br>
 <br>
 Copyright song billion people affixed it http://www.geyimin.com <br>
-Welcome reproduced.</p>
+Welcome reproduced.</p><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
