--- a/nszz/ts72.htm
+++ b/nszz/ts72.htm
@@ -1,22 +1,23 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>лЛйИ72ё╨╦ПрЮцЯр╡Ё╚╣╪птвтси</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>Е╓╘Д╧╕72О╪ Х▒⌡Д╨╕Ф╟▒Д╧÷Е─║Е╞╪Ф─╖Х┤╙Г■╠</title>
 </head>
 
 <body>
 
 <p>
 <span style="color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); display: inline !important; float: none;">
-лЛйИ72ё╨╦ПрЮцЯр╡Ё╚╣╪птвтси</span><br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
+Е╓╘Д╧╕72О╪ Х▒⌡Д╨╕Ф╟▒Д╧÷Е─║Е╞╪Ф─╖Х┤╙Г■╠</span><br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 <br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 <br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 <span style="color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); display: inline !important; float: none;">
-х╚йю╫ГкЫспп╟╫лё╛спр╩╦Ж╧╡м╛╣Цё╛╬мйгЁ╚╣╪птвтсиё╛н╙╣дйг╥╫╠Ц╫лжВмФе╝╫лм╫ё╛уФ╣двз╫л╤╪йг╫ШсШ╣дё╛╩Р</span><br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
+Е┘╗Д╦√Г∙▄Ф┴─Ф°┴И┌╙Ф∙≥О╪▄Ф°┴Д╦─Д╦╙Е┘╠Е░▄Г┌╧О╪▄Е╟╠Ф≤╞Е─║Е╞╪Ф─╖Х┤╙Г■╠О╪▄Д╦╨Г └Ф≤╞Ф√╧Д╬©Ф∙≥Д╦╩Г▌╘Е╔ЁФ∙≥Е╬▓О╪▄Г°÷Г └Е╝≈Ф∙≥И┐╫Ф≤╞Г╕│Ф╛╡Г └О╪▄Ф┬√</span><br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 <br style="word-wrap: break-word; color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255);">
 <span style="color: rgb(68, 68, 68); font-family: Tahoma, 'Microsoft Yahei', Simsun; font-size: 14px; font-style: normal; font-variant: normal; font-weight: normal; letter-spacing: normal; line-height: 21px; orphans: auto; text-align: start; text-indent: 0px; text-transform: none; white-space: normal; widows: auto; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: rgb(255, 255, 255); display: inline !important; float: none;">
-спяо╦Я©ьжф╣дё╛╤Ь╦П╥Хвср╡Ё╚╣╪птвтсиё╛╡╩ж╙кШ╪╨╬╜мФак╤Юиые╝╟ися║ё</span></p>
+Ф°┴Д╦╔Ф═╪Ф▌╖Е┬╤Г └О╪▄Х─▄Х▒⌡Г√╞Е╜░Д╧÷Е─║Е╞╪Ф─╖Х┤╙Г■╠О╪▄Д╦█Г÷╔Д╩√Е╥╠Г╩▐Г▌╘Д╨├Е╓ Е╟▒Е╔ЁЕ░╖Е▐▀Ц─┌</span></p>
+<iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=Б─°autoБ─² width="100%"></iframe>
 
 </body>
 
