--- a/nszz/dsp12.htm
+++ b/nszz/dsp12.htm
@@ -2,9 +2,9 @@
 
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title> Éñ¾­µÚÊ®¶şÕÂÓïÂ¼Êé¶ÌÊÓÆµ
-ºÏ¼¯</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title> ç¥ç»ç¬¬åäºŒç« è¯­å½•ä¹¦çŸ­è§†é¢‘
+åˆé›†</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -15,33 +15,59 @@
 <body>
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
-<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><font size="6" color="#800080"> Éñ¾­µÚÊ®¶şÕÂÓïÂ¼Êé¶ÌÊÓÆµ
-  ºÏ¼¯</font>&nbsp;</p><p>¡¡</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-99-101-sj12-1-4.mp4">Éñ¾­¸£ÒôÊé99-101½ÚÓïÂ¼Êé1-4½Ú</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
-  <a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-5-15.mp4">Éñ¾­ ÓïÂ¼Êé5-15½Ú</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-16-22.mp4">Éñ¾­ ÓïÂ¼Êé16-22½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp;
+<p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span><font size="6" color="#800080"> ç¥ç»ç¬¬åäºŒç« è¯­å½•ä¹¦çŸ­è§†é¢‘
+  åˆé›†</font>&nbsp;</p><p>ã€€</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj11-99-101-sj12-1-4.mp4">ç¥ç»ç¦éŸ³ä¹¦99-101èŠ‚è¯­å½•ä¹¦1-4èŠ‚</a> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;
+  <a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-5-15.mp4">ç¥ç» è¯­å½•ä¹¦5-15èŠ‚</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-16-22.mp4">ç¥ç» è¯­å½•ä¹¦16-22èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp;
 
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-23-30.mp4">Éñ¾­ ÓïÂ¼Êé23-30½Ú</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-31-35.mp4">Éñ¾­ ÓïÂ¼Êé31-35½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp;
-  <a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-36-42.mp4">Éñ¾­ ÓïÂ¼Êé36-42½Ú</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-43-48.mp4">Éñ¾­ ÓïÂ¼Êé43-48½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
-
-
-
-  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-49-51.mp4">Éñ¾­ ÓïÂ¼Êé49-51½Ú</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-52-54.mp4">Éñ¾­ ÓïÂ¼Êé52-54½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-55-60.mp4">Éñ¾­ ÓïÂ¼Êé55-60½Ú</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-61-68.mp4">Éñ¾­ ÓïÂ¼Êé61-68½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-23-30.mp4">ç¥ç» è¯­å½•ä¹¦23-30èŠ‚</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-31-35.mp4">ç¥ç» è¯­å½•ä¹¦31-35èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp;
+  <a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-36-42.mp4">ç¥ç» è¯­å½•ä¹¦36-42èŠ‚</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-43-48.mp4">ç¥ç» è¯­å½•ä¹¦43-48èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;
 
 
-	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-69-72.mp4">Éñ¾­ ÓïÂ¼Êé69-72½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp; 
-<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-73-76.mp4">Éñ¾­ ÓïÂ¼Êé73-76½Ú</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; 
-<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-77-79.mp4">Éñ¾­ ÓïÂ¼Êé77-79½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp; 
 
-	<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-80-84.mp4">Éñ¾­ ÓïÂ¼Êé80-84½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
+  <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhs/sj12-49-51.mp4">ç¥ç» è¯­å½•ä¹¦49-51èŠ‚</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-52-54.mp4">ç¥ç» è¯­å½•ä¹¦52-54èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-55-60.mp4">ç¥ç» è¯­å½•ä¹¦55-60èŠ‚</a> &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-61-68.mp4">ç¥ç» è¯­å½•ä¹¦61-68èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp; 
+
+
+	<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-69-72.mp4">ç¥ç» è¯­å½•ä¹¦69-72èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-73-76.mp4">ç¥ç» è¯­å½•ä¹¦73-76èŠ‚</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-77-79.mp4">ç¥ç» è¯­å½•ä¹¦77-79èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp; 
+
+	<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-80-84.mp4">ç¥ç» è¯­å½•ä¹¦80-84èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; 
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-85-89.mp4">Éñ¾­ ÓïÂ¼Êé85-89½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-90-93.mp4">Éñ¾­ ÓïÂ¼Êé90-93½Ú</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-94-101.mp4">Éñ¾­ ÓïÂ¼Êé94-101½Ú</a> &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-102.mp4">Éñ¾­ ÓïÂ¼Êé102½Ú</a> &nbsp;&nbsp; &nbsp;
+	<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-85-89.mp4">ç¥ç» è¯­å½•ä¹¦85-89èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-90-93.mp4">ç¥ç» è¯­å½•ä¹¦90-93èŠ‚</a> &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-94-101.mp4">ç¥ç» è¯­å½•ä¹¦94-101èŠ‚</a> &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-102.mp4">ç¥ç» è¯­å½•ä¹¦102èŠ‚</a> &nbsp;&nbsp; &nbsp;
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-103-107.mp4">Éñ¾­ ÓïÂ¼Êé103-107½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-107-110.mp4">Éñ¾­ ÓïÂ¼Êé107-110½Ú</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
-</span>&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-111-117.mp4">Éñ¾­ ÓïÂ¼Êé111-117½Ú</a> &nbsp;&nbsp; 
-<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsj12-118-126.mp4">Éñ¾­ ÓïÂ¼Êé118-126½Ú</a> &nbsp;&nbsp; 
+<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-103-107.mp4">ç¥ç» è¯­å½•ä¹¦103-107èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>&nbsp; &nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-107-110.mp4">ç¥ç» è¯­å½•ä¹¦107-110èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>&nbsp; &nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsp/sj12-111-117.mp4">ç¥ç» è¯­å½•ä¹¦111-117èŠ‚</a> &nbsp;&nbsp; 
+<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span>&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dsj12-118-126.mp4">ç¥ç» è¯­å½•ä¹¦118-126èŠ‚</a> &nbsp;&nbsp; 
   
-<p>¡¡</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp; ã€€<a target="_blank" a href="http://www.gegod.com/movie/dsj12-127-130--2-1-2.mp4">ç¥ç»è¯­å½•ä¹¦127-130èŠ‚å¯ç¤ºä¹¦1-2èŠ‚</a></font><font size="4" color="#800080">&nbsp;&nbsp;
+&nbsp; <a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-131-137.mp4">ç¥ç» è¯­å½•ä¹¦131-137èŠ‚</a> &nbsp;&nbsp;<span lang="en-us">&nbsp;
+</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-138-144.mp4">ç¥ç» è¯­å½•ä¹¦138-144èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;
+</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-145-146.mp4">ç¥ç» è¯­å½•ä¹¦145-146èŠ‚</a> &nbsp;&nbsp;
 
+
+</p>&nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span><a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-147-151.mp4">ç¥ç» è¯­å½•ä¹¦147-151èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;
+</span>&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-155-157.mp4">ç¥ç» è¯­å½•ä¹¦155-157èŠ‚</a> &nbsp;<span lang="en-us">&nbsp;&nbsp;
+</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-158-161.mp4">ç¥ç» è¯­å½•ä¹¦158-161èŠ‚</a> &nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;
+</span>&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-162-164.mp4">ç¥ç» è¯­å½•ä¹¦162-164èŠ‚</a> &nbsp;&nbsp;
+</p>&nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp; </span><a target="_blank" a href="http://www.gegod.com/movie/dhx/sj12-165-167.mp4">ç¥ç» è¯­å½•ä¹¦165-167èŠ‚</a> &nbsp;&nbsp;<span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;
+</span>&nbsp;
+
+
+
+
+
+
+<p><span lang="en-us">&nbsp; </span>
+
+
+
+</p>
+
+</p>
+
+</p>
 
 
 </font>
@@ -59,7 +85,19 @@ var _hmt = _hmt || [];
 })();
 </script><br><br>
 
-<p>¡¡</p>
+<p>ã€€</p><p>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- h -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-4478354601389172"
+     data-ad-slot="2825366864"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</p>
 
 </body>
 
