--- a/nszz/dsp26.htm
+++ b/nszz/dsp26.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>神经第二章启示书短视频合集</title>
+<title>神经第二十六章葛花训短视频合集</title>
 <style type="text/css">
 .style1 {
 	margin-left: 40px;
@@ -15,19 +15,15 @@
 
 <p>&nbsp;<span lang="en-us">&nbsp;&nbsp; </span>&nbsp;</p>
 <p><span lang="en-us">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </span>
-<font size="6" color="#800080">神经第二章启示书短视频合集<span lang="en-us"> </span></font></p>
+<font size="6" color="#800080">神经第二十六章葛花训短视频合集<span lang="en-us"> </span></font></p>
 <p>　</p>
 <p>　
 
 <font size="6" color="#800080">&nbsp;</font><font size="4" color="#800080">
 </font><font size="4" color="#800080">
-<a target="_blank" a href="http://www.gegod.com/movie/dsj12-127-130--2-1-2.mp4">神经语录书127-130节启示书1-2节</a></font><font size="4" color="#800080">&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dsj2-3-6.mp4">神经启示书3-6节</a>&nbsp;</font><font size="4" color="#800080">&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsj2-7-9.mp4">神经启示书7-9节</a>&nbsp;&nbsp;
+<a target="_blank" a href="http://www.gegod.com/movie/ez/sj26-1-1.mp4">神经葛花训（一）1节</a></font><font size="4" color="#800080">&nbsp;&nbsp;
 </font>
-<p>　<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span><a target="_blank" a href="http://www.gegod.com/movie/dsj2-10-12.mp4">神经启示书10-12节</a>&nbsp;</font><font size="4" color="#800080">&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsj2-12-14.mp4">神经启示书12-14节</a>&nbsp;&nbsp;
-<a target="_blank" a href="http://www.gegod.com/movie/dsj2-15.mp4">神经启示书15节附件（一）</a>&nbsp;&nbsp;<a target="_blank" a href="http://www.gegod.com/movie/dsj2-fj.mp4">神经启示书附件（一）（二）（三）</a>&nbsp;　<p>
-<span lang="en-us">&nbsp;&nbsp;&nbsp; </span><br>
-
+<p>　<p><span lang="en-us">&nbsp;&nbsp;&nbsp; </span>　<a target="_blank" a href="http://www.gegod.com/movie/zms/dsj26-6-1-3.mp4">神经葛花训（六）赞美诗1-3节</a><font size="4" color="#800080">&nbsp;&nbsp;</font>
 <p>　</p>
 
 
