--- a/nszz/xzqq.htm
+++ b/nszz/xzqq.htm
@@ -1,8 +1,8 @@
 <html>
 
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gb2312">
-<title>ÏÈÖªÓëÏÈÖªÃÅÍ½QQÁÄ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<title>å…ˆçŸ¥ä¸Žå…ˆçŸ¥é—¨å¾’QQèŠ</title>
 <style>
 <!--
 .bodys{height:auto;width:97%;padding-right:0px; overflow-x: hidden;font-size:9pt;line-height:normal/*23px*/;text-indent:24px;margin-top:10px;margin-bottom:50px;word-wrap: break-word;word-break: break-all;}
@@ -21,106 +21,107 @@
 		<div class="bodys" onload="this.style.overflowX='auto';">
 			<br>
 			<br>
-			ÏÈÖªÓëÏÈÖªÃÅÍ½QQÁÄ<br>
+			å…ˆçŸ¥ä¸Žå…ˆçŸ¥é—¨å¾’QQèŠ<br>
 			<br>
 			<br>
 			<br>
-			°®ÖÚÈË 21:28:03<br>
-			ÏÈÖªÄúºÃ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:28:31<br>
-			ÄãºÃ<br>
-			°®ÖÚÈË 21:29:04<br>
-			ÎÒ°ÑÄúÍøÕ¾ÔÚÖ÷ÄÚ´«Ò»ÏÂ,ÓÐ¼¸¸öÐÖµÜºÜ¸ÐÐËÈ¤,<br>
-			°®ÖÚÈË 21:29:16<br>
-			¸ÐÐ»Ö÷,ÈÏÊ¶Äã<br>
-			Ê¥¸ðÒàÃñÌù°É 21:29:27<br>
-			Ð»Ð»<br>
-			°®ÖÚÈË 21:29:36<br>
-			ÄãÓÐÎÞ×ÊÁÏ¿ÉÒÔ¼Ä¸øÎÒÃÇ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:29:53<br>
-			¸ÐÐ»Ö÷µÄ´øÁì<br>
-			°®ÖÚÈË 21:30:09<br>
-			Ö»¿´µ½ÍøÉÏµÄ,ÐÖµÜÃÇ»¹ÓÐµã²»¼á¶¨<br>
+			çˆ±ä¼—äºº 21:28:03<br>
+			å…ˆçŸ¥æ‚¨å¥½<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:28:31<br>
+			ä½ å¥½<br>
+			çˆ±ä¼—äºº 21:29:04<br>
+			æˆ‘æŠŠæ‚¨ç½‘ç«™åœ¨ä¸»å†…ä¼ ä¸€ä¸‹,æœ‰å‡ ä¸ªå…„å¼Ÿå¾ˆæ„Ÿå…´è¶£,<br>
+			çˆ±ä¼—äºº 21:29:16<br>
+			æ„Ÿè°¢ä¸»,è®¤è¯†ä½ <br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:29:27<br>
+			è°¢è°¢<br>
+			çˆ±ä¼—äºº 21:29:36<br>
+			ä½ æœ‰æ— èµ„æ–™å¯ä»¥å¯„ç»™æˆ‘ä»¬<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:29:53<br>
+			æ„Ÿè°¢ä¸»çš„å¸¦é¢†<br>
+			çˆ±ä¼—äºº 21:30:09<br>
+			åªçœ‹åˆ°ç½‘ä¸Šçš„,å…„å¼Ÿä»¬è¿˜æœ‰ç‚¹ä¸åšå®š<br>
 			
-			°®ÖÚÈË 21:31:03<br>
-			ËûÃÇ¶¼¿ÊÍûÏÈÖªÄÜÇ×ÁÙ´«µÀ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:31:12<br>
-			ÎÒ¸öÈËÎÄÕÂ£¬È«ÔÚÍøÉÏ<br>
-			°®ÖÚÈË 21:31:43<br>
-			Ö÷Òª²»ÊÇÃ¿¸öÐÖµÜ¶¼ÄÜÉÏÍøµÄ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:31:50<br>
-			Õâ¸ö£¬²»ÊìÏ¤<br>
-			ÎÒÖ÷ÒªÔÚÍøÉÏ¸£´«<br>
-			Òª¹¤×÷µÄ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:32:28<br>
-			ÎÒ¸öÈËµÄ£¬Ã»ÊéÃæ×ÊÁÏ<br>
-			°®ÖÚÈË 21:33:08<br>
-			½ÌÄÚ×ÊÁÏ,ÓÐÎÞ´òÓ¡ºÃµÄ°¡<br>
-			Ê¥¸ðÒàÃñÌù°É 21:33:34<br>
-			Ã»ÓÐ°¡<br>
-			Ê¥¸ðÒàÃñÌù°É 21:33:58<br>
-			ÎÒÃÇ½Ì»áºÍ´ó¼ÒÒ»Ñù£¬Ñ§Ê¥¾­<br>
-			°®ÖÚÈË 21:34:11<br>
-			Ô­ÏÈÖªÄÜ¿¼ÂÇµ½Ã»ÉÏÍøµÄÐÖµÜ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:34:17<br>
-			¸ðÒàÃñ½ÌÖ»´æÔÚÍøÂç<br>
-			°®ÖÚÈË 21:34:16<br>
-			¸ÐÐ»Ö÷<br>
-			°®ÖÚÈË 21:35:18<br>
-			ËûÃÇÏë·îÏ×,ÒÔÇóÏÈÖª±£»¤<br>
-			Ê¥¸ðÒàÃñÌù°É 21:35:25<br>
-			¾ÍÊÇ¸ðÒàÃñ¾­[¸ð»¨Ñµ£¬ÄãÖ±½Ó¿É´òÓ¡Ñ½<br>
-			°®ÖÚÈË 21:35:29<br>
-			ÎÒÒ²²»ºÃ´òÓ¡ÄØ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:35:46<br>
-			²»Òª·îÏ×<br>
-			°®ÖÚÈË 21:35:52<br>
-			ÎÒÖ»ÄÜ¸úËûÃÇ¿ÚËµÄØ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:36:37<br>
-			´øËûÃÇÉÏÍø¿´Ò»±é°É<br>
-			°®ÖÚÈË 21:36:39<br>
-			ÈçÓÐ´òÓ¡ºÃµÄ¸ð»¨Ñµ,¿ÉÒÔ¼ÄÀ´Âð<br>
-			°®ÖÚÈË 21:36:50<br>
-			ÓÐµÄÎÒÒÑ´ø¿´¹ýÁË<br>
-			Ê¥¸ðÒàÃñÌù°É 21:37:25<br>
-			¼Ä²»ºÃ£¬Õâ½Ð´«½Ì£¬²»Í×<br>
-			°®ÖÚÈË 21:37:30<br>
-			ÎÒ²»¶®<br>
-			°®ÖÚÈË 21:37:42<br>
-			ÏÈÖª¸ÃÊÇÍòÄÜµÄ²Å¶Ô<br>
-			Ê¥¸ðÒàÃñÌù°É 21:38:10<br>
-			ÏÈÖª²»ÍòÄÜ<br>
-			°®ÖÚÈË 21:38:11<br>
-			´«¸£ÒôÓÐ´íÂð<br>
-			Ê¥¸ðÒàÃñÌù°É 21:38:18<br>
-			Ö»ÓÐÉñÍòÄÜ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:38:52<br>
-			¹úÄÚÕþ¸®²»ÈÏ¿É<br>
-			°®ÖÚÈË 21:38:58<br>
-			Å¶,<br>
-			Ê¥¸ðÒàÃñÌù°É 21:40:00<br>
-			ÄãÃÇ»´°²ÄÄÀï£¿<br>
-			Ê¥¸ðÒàÃñÌù°É 21:40:11<br>
-			ÎÒÊÇÕò½­ÊÐ<br>
-			°®ÖÚÈË 21:40:07<br>
-			ÏçÏÂµÄ,<br>
-			°®ÖÚÈË 21:40:12<br>
-			»´ÒõÇøµÄ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:40:30<br>
-			ÖªµÀ<br>
+			çˆ±ä¼—äºº 21:31:03<br>
+			ä»–ä»¬éƒ½æ¸´æœ›å…ˆçŸ¥èƒ½äº²ä¸´ä¼ é“<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:31:12<br>
+			æˆ‘ä¸ªäººæ–‡ç« ï¼Œå…¨åœ¨ç½‘ä¸Š<br>
+			çˆ±ä¼—äºº 21:31:43<br>
+			ä¸»è¦ä¸æ˜¯æ¯ä¸ªå…„å¼Ÿéƒ½èƒ½ä¸Šç½‘çš„<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:31:50<br>
+			è¿™ä¸ªï¼Œä¸ç†Ÿæ‚‰<br>
+			æˆ‘ä¸»è¦åœ¨ç½‘ä¸Šç¦ä¼ <br>
+			è¦å·¥ä½œçš„<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:32:28<br>
+			æˆ‘ä¸ªäººçš„ï¼Œæ²¡ä¹¦é¢èµ„æ–™<br>
+			çˆ±ä¼—äºº 21:33:08<br>
+			æ•™å†…èµ„æ–™,æœ‰æ— æ‰“å°å¥½çš„å•Š<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:33:34<br>
+			æ²¡æœ‰å•Š<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:33:58<br>
+			æˆ‘ä»¬æ•™ä¼šå’Œå¤§å®¶ä¸€æ ·ï¼Œå­¦åœ£ç»<br>
+			çˆ±ä¼—äºº 21:34:11<br>
+			åŽŸå…ˆçŸ¥èƒ½è€ƒè™‘åˆ°æ²¡ä¸Šç½‘çš„å…„å¼Ÿ<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:34:17<br>
+			è‘›äº¦æ°‘æ•™åªå­˜åœ¨ç½‘ç»œ<br>
+			çˆ±ä¼—äºº 21:34:16<br>
+			æ„Ÿè°¢ä¸»<br>
+			çˆ±ä¼—äºº 21:35:18<br>
+			ä»–ä»¬æƒ³å¥‰çŒ®,ä»¥æ±‚å…ˆçŸ¥ä¿æŠ¤<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:35:25<br>
+			å°±æ˜¯è‘›äº¦æ°‘ç»[è‘›èŠ±è®­ï¼Œä½ ç›´æŽ¥å¯æ‰“å°å‘€<br>
+			çˆ±ä¼—äºº 21:35:29<br>
+			æˆ‘ä¹Ÿä¸å¥½æ‰“å°å‘¢<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:35:46<br>
+			ä¸è¦å¥‰çŒ®<br>
+			çˆ±ä¼—äºº 21:35:52<br>
+			æˆ‘åªèƒ½è·Ÿä»–ä»¬å£è¯´å‘¢<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:36:37<br>
+			å¸¦ä»–ä»¬ä¸Šç½‘çœ‹ä¸€éå§<br>
+			çˆ±ä¼—äºº 21:36:39<br>
+			å¦‚æœ‰æ‰“å°å¥½çš„è‘›èŠ±è®­,å¯ä»¥å¯„æ¥å—<br>
+			çˆ±ä¼—äºº 21:36:50<br>
+			æœ‰çš„æˆ‘å·²å¸¦çœ‹è¿‡äº†<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:37:25<br>
+			å¯„ä¸å¥½ï¼Œè¿™å«ä¼ æ•™ï¼Œä¸å¦¥<br>
+			çˆ±ä¼—äºº 21:37:30<br>
+			æˆ‘ä¸æ‡‚<br>
+			çˆ±ä¼—äºº 21:37:42<br>
+			å…ˆçŸ¥è¯¥æ˜¯ä¸‡èƒ½çš„æ‰å¯¹<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:38:10<br>
+			å…ˆçŸ¥ä¸ä¸‡èƒ½<br>
+			çˆ±ä¼—äºº 21:38:11<br>
+			ä¼ ç¦éŸ³æœ‰é”™å—<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:38:18<br>
+			åªæœ‰ç¥žä¸‡èƒ½<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:38:52<br>
+			å›½å†…æ”¿åºœä¸è®¤å¯<br>
+			çˆ±ä¼—äºº 21:38:58<br>
+			å“¦,<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:40:00<br>
+			ä½ ä»¬æ·®å®‰å“ªé‡Œï¼Ÿ<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:40:11<br>
+			æˆ‘æ˜¯é•‡æ±Ÿå¸‚<br>
+			çˆ±ä¼—äºº 21:40:07<br>
+			ä¹¡ä¸‹çš„,<br>
+			çˆ±ä¼—äºº 21:40:12<br>
+			æ·®é˜´åŒºçš„<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:40:30<br>
+			çŸ¥é“<br>
 			
-			°®ÖÚÈË 21:41:28<br>
-			Ã»ÓÐ¸ð»¨ÑµµÄ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:42:40<br>
-			£º£©ÕÒµ±µØ´òÓ¡Ã»ÊÂ<br>
-			¼Ä×Ú½Ì¶«Î÷²»ºÃ<br>
-			°®ÖÚÈË 21:42:49<br>
-			ÎÒÉíÌå²»ºÃ,ÒªË¯ÁË,ÔÙ¼û,ÓÐÁË¼ÇµÃ¼Ä¸øÎÒ<br>
-			Ê¥¸ðÒàÃñÌù°É 21:43:08<br>
+			çˆ±ä¼—äºº 21:41:28<br>
+			æ²¡æœ‰è‘›èŠ±è®­çš„<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:42:40<br>
+			ï¼šï¼‰æ‰¾å½“åœ°æ‰“å°æ²¡äº‹<br>
+			å¯„å®—æ•™ä¸œè¥¿ä¸å¥½<br>
+			çˆ±ä¼—äºº 21:42:49<br>
+			æˆ‘èº«ä½“ä¸å¥½,è¦ç¡äº†,å†è§,æœ‰äº†è®°å¾—å¯„ç»™æˆ‘<br>
+			åœ£è‘›äº¦æ°‘è´´å§ 21:43:08<br>
 			88</div>
 		</td>
 	</tr>
-</table>
+</table><iframe MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 VSPACE=0 FRAMEBORDER=0 SCROLLING=no src="../scsl/footer.html" height=â€œautoâ€ width="100%"></iframe>
+
 
 </body>
 
